cp/ 	PR c++/30818 	* typeck.c (structural_comptypes): No need to check 	resolve_typename_type return value here. 	* cp-tree.h (TYPENAME_IS_RESOLVING_P): New. 	* pt.c (resolve_typename_type): Follow typename typedefs.  Return 	original type rather than error_mark_node in case of failure. 	* parser.c (cp_parser_nested_name_specifier_opt): Adjust 	resolve_typename_type result check. 	(cp_parser_direct_declarator, cp_parser_head, 	cp_parser_constructor_declarator_p): Likewise.

testsuite/
	PR c++/30818
	* g++.dg/template/crash47.C: Adjust errors.
	* g++.dg/template/crash48.C: Adjust errors.
	* g++.dg/template/typename12.C: New.
	* g++.dg/template/typename13.C: New.
	* g++.dg/template/typename14.C: New.
	* g++.dg/template/typedef6.C: Adjust errors.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@126825 138bc75d-0d04-0410-961f-82ee72b054a4